--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 					<p>See Original <br />
 					AFFIDAVIT <a href="http://barondavidward.com">BDW.com</a></p>
 					<ul class="actions">
-						<li><a href="https://jpcdn.it/img/db22aeb76aba92566d2fa9f7c36d8306.jpg" class="button primary icon solid fa-download">PUBLIC NOTICE</a></li>
-						<li><a href="https://jpcdn.it/img/ecbe7a9ce55431164b5384ac56898dd4.jpg" class="button icon solid fa-chevron-down scrolly">Affidavit and Securitized Lien</a></li>
+						<li><a href="https://jpcdn.it/img/bcc707e6856127aa9c9cdfbceb940b3a.jpg" class="button primary icon solid fa-download">PUBLIC NOTICE</a></li>
+						<li><a href="https://jpcdn.it/img/00a198f137aec8d2c90b21d0088144b2.jpg" class="button icon solid fa-chevron-down scrolly">Affidavit and Securitized Lien</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
 			</header>
-			<iframe src="https://justpaste.it/fxxpu/pdf" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
+			<iframe src="https://justpaste.it/ebq2k/pdf" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
 					<div class="row">
-			<h2><a href="#BDWAFFLINK1">BARON DAVID WARD SENT TO LAURA J CONSIDINE </a></h2>
+			<h2><a href="#BDWAFFLINK1">BARON DAVID WARD SENT TO PATRICK J MCCARTHY </a></h2>
 						<iframe src="https://justpaste.it/ck1cl/pdf" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
 					<div class="row">
   									<p hidden>
