--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						</p>
 					
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="images/13 LET7 0 PUB NOTICE.jpg" alt="" /></div></div>
 			</header>
 			<h2><a href="#BDWAFFLINK1">BARON DAVID WARD AFFIDAVIT SERVED UPON PATRICK MCCARTHY </a></h2>
 						<iframe src="https://justpaste.it/ck1cl/pdf" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="600px" width="1100px" allowfullscreen></iframe>				</p>
