--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 						<li><a href="https://baronessb.github.io/HOHO111-HOH--PATRICK-MCCARTHY-HORWICH-FARRELLY-SOLICITOR--HOHO111/0 {w}.pdf" class="button primary icon solid fa-download">HOHO111 Affidavit and Securitized LIEN</a></li>
 						<li><a href="https://barondavidward.com/BARON DAVID WARD's 2015 Affidavit and Statement unrebutted-Original EXHIBIT served upon 657 MPs.pdf" class="button icon solid fa-chevron-down scrolly">BARON DAVID WARD 2015 Affidavit and Securitized Lien </a></li>
 					</ul>	
-					
+					<ul class="actions">
 						<li><a href="images/221002 sar.jpg" class="button primary icon solid fa-download">SUBJECT ACCESS</a></li>
 						<li><p hidden><a href="https://jpcdn.it/img/68d253e4ea7f8010c7b2b95019333e5c.jpg" class="button icon solid fa-chevron-down scrolly">Affidavit and Securitized Lien</a></li>
 						</p>
-					
+					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/13 LET7 0 PUB NOTICE.jpg" alt="" /></div></div>
 			</header>
